--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <p>Git + GitHub</p>
+    <h1>Hello!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eos hic cum ratione cumque! At soluta dolor, perspiciatis laborum itaque id provident dolorum voluptas quibusdam magnam, sunt, ipsa exercitationem corporis?</p>
 </body>
 </html>
